--- a/mygo-service/src/main/resources/application.yml
+++ b/mygo-service/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
     redis:
       host: ${mygo.data.redis.host}
       port: ${mygo.data.redis.port}
+
+
+  mail:
+    host: smtp.163.com
+    username: a728076618@163.com
+    password: mpw:jyLRm9mWq9o6tXAOYLefQtmFm/TH40oZX8K1eD5Fxy0=
+    default-encoding: UTF-8
+
+
+
 logging:
   level:
     com.mygo: debug
@@ -22,13 +32,17 @@ mybatis-plus:
     db-config:
       id-type: auto # id自增
 
+
+
+
 mygo:
   jwt:
-    location: classpath:mygo.jks
-    store-password: mpw:/4VrGA1afDwyytMgtd2NIg==
-    key-password: mpw:/4VrGA1afDwyytMgtd2NIg==
+    location: classpath:mygo.jks # hs256密钥对
+    store-password: mpw:/4VrGA1afDwyytMgtd2NIg== # jks文件的密码
+    key-password: mpw:/4VrGA1afDwyytMgtd2NIg== #
     alias: mygo
     tokenTTL: 7d
   project-info:
     project-name: MYGO心理服务平台
     version: v1.0
+
