--- a/mygo-common/pom.xml
+++ b/mygo-common/pom.xml
@@ -41,6 +41,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>3.4.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
