--- a/mygo-service/src/main/resources/application.yml
+++ b/mygo-service/src/main/resources/application.yml
@@ -23,6 +23,7 @@ logging:
   level:
     com.mygo: debug
 
+
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
@@ -30,6 +31,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto # id自增
+  mapper-locations: classpath*:/mapper/**/*.xml
 
 
 
